Fix Discussion new msg overflow

--- a/lms/static/sass/_customer-specific.scss
+++ b/lms/static/sass/_customer-specific.scss
@@ -361,4 +361,6 @@ body.discussion, .xblock-student_view-discussion {
 
 .forum-nav-thread .forum-nav-thread-link {
   width: 90% !important;
+  background: transparent !important;
 }
+
